# kocka

./: .gitignore  CMakeLists.txt  README.md  backend.cpp  backend.h  frontend.cpp  frontend.h  main.cpp
